--- a/package.json
+++ b/package.json
@@ -6,17 +6,56 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch",
+    "ci": "npm insstall && npm run build"
   },
   "dependencies": {
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.32",
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.16",
+    "@next/bundle-analyzer": "^13.2.4",
+    "@types/node": "18.14.5",
+    "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "eslint": "8.37.0",
-    "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
+    "@vercel/fetch": "^6.2.0",
+    "autoprefixer": "^10.4.13",
+    "axios": "^0.21.1",
+    "axios-logger": "^2.5.0",
+    "classnames": "^2.3.1",
+    "clsx": "^1.1.1",
+    "eslint": "8.35.0",
+    "eslint-config-next": "13.2.3",
+    "next": "13.2.3",
+    "next-auth": "^4.20.1",
+    "postcss": "^8.4.21",
+    "prettier": "2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.3"
+    "tailwindcss": "^3.2.7",
+    "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
+    "@next/eslint-plugin-next": "^13.2.4",
+    "@testing-library/dom": "^9.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "babel-jest": "^29.5.0",
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "next-router-mock": "^0.9.3"
   }
 }
