style: remove comma from tsconfig :rocket:

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,6 +52,6 @@
     "incremental": true,
     "noImplicitAny": false,
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx",],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
