--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
+    "@hookform/resolvers": "^3.0.1",
     "@next/bundle-analyzer": "^13.2.4",
     "@types/node": "18.14.5",
     "@types/react": "18.0.28",
@@ -31,8 +32,12 @@
     "prettier": "2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
+    "react-spring": "^9.7.1",
+    "react-use": "^17.4.0",
     "tailwindcss": "^3.2.7",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
