--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^1.1.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.2.3",
     "next-auth": "^4.20.1",
     "postcss": "^8.4.21",
@@ -48,6 +49,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
     "babel-jest": "^29.5.0",
