--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 API_URL=http://localhost:3200/api
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=secret
+NEXTAUTH_SECRET=jwt_access_secret
+JWT_ACCESS_SECRET=jwt_access_secret
 ANALYZE=false
