--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
     "dayjs": "^1.11.7",
-    "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
@@ -51,14 +50,7 @@
     "react-use": "^17.4.0",
     "tailwindcss": "^3.2.7",
     "typescript": "4.9.5",
-    "yup": "^1.0.2"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^17.4.4",
-    "@commitlint/config-conventional": "^17.4.4",
-    "@next/eslint-plugin-next": "^13.2.4",
-    "@types/jest": "^29.5.0",
-    "@types/jsonwebtoken": "^9.0.1",
+    "yup": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
     "eslint": "^7.27.0",
@@ -67,7 +59,14 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
+    "@next/eslint-plugin-next": "^13.2.4",
+    "@types/jest": "^29.5.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "husky": "^8.0.3"
   }
 }
