--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/node": "18.14.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
     "@vercel/fetch": "^6.2.0",
     "autoprefixer": "^10.4.13",
     "axios": "^0.21.1",
@@ -33,8 +35,16 @@
     "babel-jest": "^29.5.0",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
+    "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
+    "eslint": "^7.27.0",
     "eslint-config-next": "13.2.3",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
@@ -50,16 +60,7 @@
     "react-use": "^17.4.0",
     "tailwindcss": "^3.2.7",
     "typescript": "4.9.5",
-    "yup": "^1.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
-    "@typescript-eslint/parser": "^5.54.0",
-    "eslint": "^7.27.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0"
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
