--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-spring": "^9.7.1",
+    "react-super-responsive-table": "^5.2.1",
     "react-use": "^17.4.0",
     "tailwindcss": "^3.2.7",
     "typescript": "4.9.5",
