--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.0.16",
     "@hookform/resolvers": "^3.0.1",
     "@mui/material": "^5.11.16",
+    "@mui/x-data-grid": "^6.0.4",
     "@mui/x-date-pickers": "^6.0.4",
     "@next/bundle-analyzer": "^13.2.4",
     "@testing-library/dom": "^9.2.0",
