--- a/package.json
+++ b/package.json
@@ -51,11 +51,13 @@
     "next": "13.2.3",
     "next-auth": "^4.20.1",
     "next-router-mock": "^0.9.3",
+    "nprogress": "^0.2.0",
     "postcss": "^8.4.21",
     "prettier": "2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-query": "^3.39.3",
     "react-spring": "^9.7.1",
     "react-super-responsive-table": "^5.2.1",
     "react-use": "^17.4.0",
