--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-images-uploading": "^3.1.7",
     "react-query": "^3.39.3",
     "react-spring": "^9.7.1",
     "react-super-responsive-table": "^5.2.1",
