feat: redirect admin, creator to their pages on signup/ signin

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,9 @@
       "@/images/*": [
         "public/images/*"
       ],
+      "@/middleware/*": [
+        "middleware/*"
+      ],
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
