feat: create blockly folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,12 @@
       "@/middleware/*": [
         "middleware/*"
       ],
+      "@/blockly/*": [
+        "blockly/*"
+      ],
+      "@/blockly": [
+        "blockly"
+      ],
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
