--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-use": "^17.4.0",
     "tailwindcss": "^3.2.7",
     "typescript": "4.9.5",
+    "use-immer": "^0.9.0",
     "yup": "^1.0.2"
   },
   "devDependencies": {
