--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "next-auth": "^4.20.1",
     "next-router-mock": "^0.9.3",
     "nprogress": "^0.2.0",
+    "party-js": "^2.2.0",
     "postcss": "^8.4.21",
     "prettier": "2.8.4",
     "qs": "^6.11.1",
