--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@headlessui/react": "^1.7.13",
+    "@hedgedoc/html-to-react": "^1.4.6",
     "@heroicons/react": "^2.0.16",
     "@hookform/resolvers": "^3.0.1",
     "@mui/material": "^5.11.16",
@@ -48,6 +49,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
+    "isomorphic-dompurify": "^1.3.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
