--- a/package.json
+++ b/package.json
@@ -62,12 +62,14 @@
     "prettier": "2.8.4",
     "qs": "^6.11.1",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-images-uploading": "^3.1.7",
     "react-query": "^3.39.3",
     "react-spring": "^9.7.1",
     "react-super-responsive-table": "^5.2.1",
+    "react-to-print": "^2.14.12",
     "react-use": "^17.4.0",
     "tailwindcss": "^3.2.7",
     "typescript": "4.9.5",
