--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
+    "html2canvas": "^1.4.1",
     "isomorphic-dompurify": "^1.3.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
