--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
+    "jspdf": "^2.5.1",
     "next": "13.2.3",
     "next-auth": "^4.20.1",
     "next-router-mock": "^0.9.3",
