feat: allow js files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -61,6 +61,6 @@
     "incremental": true,
     "noImplicitAny": false,
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "blockly/**/*.js"],
   "exclude": ["node_modules"]
 }
