--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "party-js": "^2.2.0",
     "postcss": "^8.4.21",
     "prettier": "2.8.4",
+    "prismjs": "^1.29.0",
     "qs": "^6.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
